Pages/Index.razor.css
.subpage {
	width: 100vw;
	height: 100vh;
	scroll-snap-align: start;
	position: relative;

	overflow: hidden;
}

.subpage-content {
	position: absolute;
	left: 0;
	top: 0;
	min-width: 100%;
	min-height: 100%;

	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;

	-webkit-backdrop-filter: blur(0.5vw) grayscale(30%);
	        backdrop-filter: blur(0.5vw) grayscale(30%);
}

.page-container {
	overflow-y: scroll;
	height: 100vh;
	-ms-scroll-snap-type: y mandatory;
	    scroll-snap-type: y mandatory;
	scroll-behavior: smooth;
	background-color: #343638;
}

.scroll-down {
	width: 60px;
	height: 60px;

	border-radius: 100%;

	position: absolute;
	bottom: 60px;
	left: 50%;
	transform: translate(-50%, 50%);

	cursor: pointer;
}

.scroll-down::after {
	content: "";

	position: absolute;
	top: 22%;
	left: 50%;
	transform: translate(-50%, 0) scale(150%, 100%) rotate(-45deg);

	width: 40%;
	height: 40%;

	border: 3px solid gainsboro;
	border-top: transparent;
	border-right: transparent;

	-webkit-animation: scroll-down 1s ease-in-out infinite;
	        animation: scroll-down 1s ease-in-out infinite;
}

@-webkit-keyframes scroll-down {
	0% {
		top: 22%;
	}
	50% {
		top: 48%;
	}
	100% {
		top: 22%;
	}
}

@keyframes scroll-down {
	0% {
		top: 22%;
	}
	50% {
		top: 48%;
	}
	100% {
		top: 22%;
	}
}

@media (max-height: 600px) {
	.scroll-down {
		width: 40px;
		height: 40px;

		bottom: 40px;
	}

	.scroll-down::after {
		border-width: 2px;
	}
}

@media (max-height: 350px) {
	.scroll-down {
		display: none;
	}
	
	.scroll-down::after {
		display: none;
	}
}

